# boxed-bots

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: defaults.yaml  i18n.yaml
deploy/: docker-compose.j2.yaml  inventory.yaml  playbook.yaml
deploy/alumni/: docker-compose.j2.yaml  inventory.yaml  requirements.yml
deploy/alumni/nginx/: default.conf
deploy/alumni/playbooks/: _00_docker.yaml  _01_certs.yaml  _02_deploy.yaml
deploy/alumni/scripts/: copy-services-certs.j2.sh  empty.sh
deploy/charts/: Chart.yaml  values_baumanec-call-2025.yaml  values_baumanec-call-2026.yaml  values_dev-ops-it-2025.yaml  values_mic-call.yaml
deploy/charts/templates/: bot-deployment.yaml  ui-deployment.yaml  ui-ingress.yaml  ui-service.yaml
deploy/modsecurity/: modsecurity.conf  setup.conf
deploy/nginx/: default.conf  location-common.conf  proxy-include.conf  ssl.conf
deploy/playbooks/: _01_certs.yaml  _02_deploy.yaml
keycloak/: realm-export.json
runtime/: box-bot  functions
src/bot/: application.py  application_builder.py  callback_constants.py  default_handlers.py  exceptions.py  group_handlers.py  helpers.py  main.py  map_handlers.py  user_handlers.py
src/bot/handlers/: default.py  group.py  notification.py  user.py
src/bot/handlers/groups/: base_handlers.py  pass_handlers.py
src/bot/helpers/: fields.py  keyboards.py  promocodes.py  replyable_condition_messages.py  send_to_all.py  user.py
src/bot/jobs/: expired_promocodes.py  notifications.py  personal_notifications.py
src/bot/telegram/: application.py  application_builder.py  callback_constants.py  default_handlers.py
src/ui/: api_keycloak.py  app.py  dependencies.py  helpers.py  keycloak.py  login.py  main.py  provider.py  router.py  setup.py  ui_keycloak.py  ui_provider.py
src/ui/routers/: bot_status.py  field_branches.py  fields.py  groups.py  keyboard_keys.py  login.py  logs.py  minio.py  notifications.py  promocodes.py  replyable_condition_messages.py  settings.py  users.py
src/ui/templates/: base.j2.html  field_branches.j2.html  fields.j2.html  groups.j2.html  keyboard_keys.j2.html  logs.j2.html  notifications.j2.html  promocodes.j2.html  replyable_condition_messages.j2.html  settings.j2.html  status.j2.html  users.j2.html
src/utils/: bb_provider.py  config_model.py  custom_types.py  db_model.py  exceptions.py  minio_client.py
(+31 files in other folders)
