[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.2"
python-telegram-bot = {version = "^21.0.1", extras = ["job-queue"]}
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
jinja2 = "^3.1.3"
minio = "^7.2.5"
SQLAlchemy = "^2.0.28"
filetype = "^1.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
oic = "^1.6.1"
PyJWT = "^2.8.0"
python-keycloak = "^3.9.1"
pillow = "^10.3.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
XlsxWriter = "^3.2.0"
uuid = "^1.30"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv.sources]
asyncpg = { git = "https://github.com/MagicStack/asyncpg"}

### Ruff ###

[tool.ruff]
target-version = "py312"
line-length = 120  # 100 или 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501",  # Line too long
  "D",  # pydocstyle
  "S",  # flake8-bandit
  "W",  # pycodestyle warnings (покрываются форматированием)
  "EM", "TRY003",  # Передача строк в конструктор исключений
  "TD", "FIX",  # flake8-todos, flake8-fixme
  "TCH",  # flake8-type-checking
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "RUF001", "RUF002", "RUF003",  # ambiguous character warnings (Не работают с кириллицей)
  "COM812", "ISC001",  # following rules may cause conflicts when used with the formatter
  "PGH003",  # Use specific rule codes when ignoring type issues
  "BLE001",  # Do not catch blind exception: `Exception`
  "ERA",  # Found commented-out code
  "PLR0913",  # Too many arguments in function definition
  "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = [
  "INP", "E402"
]
"*.ipynb" = [
  "PLE1142",  # Checks for uses of await outside of async functions
  "T201",  # Checks for print statements
]

### Pyrgiht ###

[tool.pyright]
exclude = [".venv/", "**/__pycache__", ".*cache*/", "__*/", "alembic/versions/"]
venvPath = "."
venv = ".venv"

# typeCheckingMode = "strict"  # Строгий режим не нужно соблюдать постоянно, но полезно иногда включать и проверять

reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeArgument = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
